Added utility base class for printing debug messages.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,8 @@ target_sources(communicator-client PRIVATE
         CommunicatorClient.cpp
         tui/CommandBox.cpp
         tui/MainLayout.cpp
+        tui/EchoBox.cpp
+        Talkative.cpp
         client.cpp
 )
 
