Project files has been cleaned up.

--- a/src/tui/CMakeLists.txt
+++ b/src/tui/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(tui STATIC)
 target_link_libraries(tui LINK_PUBLIC ${Boost_LIBRARIES} cppurses pthread)
-target_include_directories(tui PUBLIC ../tui)
+target_include_directories(tui PRIVATE headers)
 target_sources(tui PRIVATE
         EchoBox.cpp
         CommandBox.cpp
